NNO-12906 Скрывается по правам колонка, содержащая кнопку с ссылкой