@@ -57,35 +57,35 @@ class ApplicationAccessTransformerTest extends SourceCompileTestBase {
         Application application = (Application) ((ReadCompileTerminalPipeline) pipeline.transform())
                 .get(new ApplicationContext("testApplicationAccessTransformer"));
 
-        checkMenuItem(application.getHeader().getMenu().getItems().get(0));
-        checkMenuItem(application.getHeader().getExtraMenu().getItems().get(0));
-        checkMenuItem(application.getSidebars().get(0).getMenu().getItems().get(0));
-        checkMenuItem(application.getSidebars().get(0).getExtraMenu().getItems().get(0));
+        checkMenuItem(application.getHeader().getMenu().getItems().getFirst());
+        checkMenuItem(application.getHeader().getExtraMenu().getItems().getFirst());
+        checkMenuItem(application.getSidebars().getFirst().getMenu().getItems().getFirst());
+        checkMenuItem(application.getSidebars().getFirst().getExtraMenu().getItems().getFirst());
 
-        assertThat(((Security) application.getHeader().getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getPermissions().size(), is(1));
-        assertThat(((Security) application.getSidebars().get(0).getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getPermissions().size(), is(1));
+        assertThat(((Security) application.getHeader().getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getPermissions().size(), is(1));
+        assertThat(((Security) application.getSidebars().getFirst().getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getPermissions().size(), is(1));
         checkAnchor(application.getHeader().getExtraMenu().getItems().get(2));
-        checkAnchor(application.getSidebars().get(0).getExtraMenu().getItems().get(2));
+        checkAnchor(application.getSidebars().getFirst().getExtraMenu().getItems().get(2));
     }
 
     private void checkAnchor(MenuItem menuItem) {
-        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getPermissions(), nullValue());
-        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getRoles(), nullValue());
-        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getUsernames().contains("user"), is(true));
+        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getPermissions(), nullValue());
+        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getRoles(), nullValue());
+        assertThat(((Security) menuItem.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getUsernames().contains("user"), is(true));
     }
 
     private void checkMenuItem(MenuItem item) {
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getUsernames().size(), is(1));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getUsernames().contains("user"), is(true));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getRoles().size(), is(2));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getRoles().contains("role"), is(true));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getRoles().contains("admin"), is(true));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("page").getPermissions(), nullValue());
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getUsernames().size(), is(1));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getUsernames().contains("user"), is(true));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getRoles().size(), is(2));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getRoles().contains("role"), is(true));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getRoles().contains("admin"), is(true));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("page").getPermissions(), nullValue());
 
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("object").getPermissions(), nullValue());
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("object").getRoles(), nullValue());
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("object").getUsernames().size(), is(1));
-        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).get(0).get("object").getUsernames().contains("user"), is(true));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("object").getPermissions(), nullValue());
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("object").getRoles(), nullValue());
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("object").getUsernames().size(), is(1));
+        assertThat(((Security) item.getProperties().get(SECURITY_PROP_NAME)).getFirst().get("object").getUsernames().contains("user"), is(true));
     }
 
     @Test
@@ -98,17 +98,17 @@ class ApplicationAccessTransformerTest extends SourceCompileTestBase {
         Application application = (Application) ((ReadCompileTerminalPipeline) pipeline.transform())
                 .get(new ApplicationContext("testApplicationAccessTransformer"));
         Header header = application.getHeader();
-        assertAccess(((Security) header.getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertAccess(((Security) header.getMenu().getItems().get(1).getSubItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertThat(((Security) header.getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getRoles().size(), is(1));
-        assertAccess(((Security) header.getExtraMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertAccess(((Security) header.getExtraMenu().getItems().get(1).getSubItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        Sidebar sidebar = application.getSidebars().get(0);
-        assertAccess(((Security) sidebar.getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertAccess(((Security) sidebar.getMenu().getItems().get(1).getSubItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertThat(((Security) sidebar.getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).get(0).get("url").getRoles().size(), is(1));
-        assertAccess(((Security) sidebar.getExtraMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        assertAccess(((Security) sidebar.getExtraMenu().getItems().get(1).getSubItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
+        assertAccess(((Security) header.getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertAccess(((Security) header.getMenu().getItems().get(1).getSubItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertThat(((Security) header.getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getRoles().size(), is(1));
+        assertAccess(((Security) header.getExtraMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertAccess(((Security) header.getExtraMenu().getItems().get(1).getSubItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        Sidebar sidebar = application.getSidebars().getFirst();
+        assertAccess(((Security) sidebar.getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertAccess(((Security) sidebar.getMenu().getItems().get(1).getSubItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertThat(((Security) sidebar.getMenu().getItems().get(2).getProperties().get(SECURITY_PROP_NAME)).getFirst().get("url").getRoles().size(), is(1));
+        assertAccess(((Security) sidebar.getExtraMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        assertAccess(((Security) sidebar.getExtraMenu().getItems().get(1).getSubItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
     }
 
     @Test
@@ -118,14 +118,10 @@ class ApplicationAccessTransformerTest extends SourceCompileTestBase {
                 "net/n2oapp/framework/access/metadata/transform/testApplicationAccessTransformer.application.xml");
         Application application = (Application) ((ReadCompileTerminalPipeline) pipeline.transform())
                 .get(new ApplicationContext("testApplicationAccessTransformer"));
-        checkPermitAll(((Security) application.getHeader().getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        checkPermitAll(((Security) application.getSidebars().get(0).getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-    }
-
-    private void checkPermitAll(Map<String, SecurityObject> securityMap) {
-        assertThat(securityMap.get("page").getPermitAll(), is(true));
-        assertThat(securityMap.get("page").getAnonymous(), nullValue());
-        assertThat(securityMap.get("page").getAuthenticated(), nullValue());
+        assertThat(application.getHeader().getMenu().getItems().getFirst().getProperties() == null ||
+                application.getHeader().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME) == null, is(true));
+        assertThat(application.getSidebars().getFirst().getMenu().getItems().getFirst().getProperties() == null ||
+                application.getSidebars().getFirst().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME) == null, is(true));
     }
 
     @Test
@@ -135,8 +131,8 @@ class ApplicationAccessTransformerTest extends SourceCompileTestBase {
                 "net/n2oapp/framework/access/metadata/transform/testApplicationAccessTransformer.application.xml");
         Application application = (Application) ((ReadCompileTerminalPipeline) pipeline.transform())
                 .get(new ApplicationContext("testApplicationAccessTransformer"));
-        checkAnonym(((Security) application.getHeader().getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        checkAnonym(((Security) application.getSidebars().get(0).getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
+        checkAnonym(((Security) application.getHeader().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        checkAnonym(((Security) application.getSidebars().getFirst().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
     }
 
     private void checkAnonym(Map<String, SecurityObject> securityMap) {
@@ -152,8 +148,8 @@ class ApplicationAccessTransformerTest extends SourceCompileTestBase {
                 "net/n2oapp/framework/access/metadata/transform/testApplicationAccessTransformer.application.xml");
         Application application = (Application) ((ReadCompileTerminalPipeline) pipeline.transform())
                 .get(new ApplicationContext("testApplicationAccessTransformer"));
-        checkAuth(((Security) application.getHeader().getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
-        checkAuth(((Security) application.getSidebars().get(0).getMenu().getItems().get(0).getProperties().get(SECURITY_PROP_NAME)).get(0));
+        checkAuth(((Security) application.getHeader().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
+        checkAuth(((Security) application.getSidebars().getFirst().getMenu().getItems().getFirst().getProperties().get(SECURITY_PROP_NAME)).getFirst());
     }
 
     private void checkAuth(Map<String, SecurityObject> securityMap) {
